--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Debugging HTML Practice
+    <title>Debugging HTML Practice</title>
   </head>
   <body>
     <div class='profile'>
-        <h6>Profile Name</h6>
+        <h1>Profile Name</h1>
         <div class='address'>Address</div>
 
         <div class='contact'>
